@@ -1,7 +1,9 @@
 2010-04-05  Kirit Saelensminde  <kirit@felspar.com>
- HTTP server
+ HTTP client/server
  - Added more allowable characters to the resource parser for HTTP requests.
  - The server request now supports handling of bad requests.
+ - The HTTP client post and put short cuts now accept all data types
+   supported by the request.
 
 2010-04-02  Kirit Saelensminde  <kirit@felspar.com>
  URL
